# mcp_python

./: GEMINI.md  README.md  plan.md  pyproject.toml
planning/: Implementar Servidor MCP con Python.md  README.md  implement_server_mcp_with_python.md
planning/detailed/: implementation_plan.md
src/mcp_pytools/: server.py
src/mcp_pytools/analysis/: imports.py  symbols.py
src/mcp_pytools/astutils/: parser.py
src/mcp_pytools/fs/: cache.py  ignore.py
src/mcp_pytools/index/: project.py
src/mcp_pytools/tools/: __init__.py  diagnostics.py  docstring_lints.py  document_symbols.py  find_definition.py  find_references.py  import_graph.py  index_build.py  index_invalidate.py  index_status.py  mutability_check.py  organize_imports.py  registry.py  rename_symbol.py  search_text.py  syntax_check.py  tool.py
tests/: helpers.py  test_cache.py  test_docstring_lints.py  test_document_symbols.py  test_find_definition.py  test_find_references.py  test_ignore.py  test_import_graph.py  test_imports.py  test_mutability_check.py  test_organize_imports.py  test_parser.py  test_placeholder.py  test_project_index.py  test_rename_symbol.py  test_search_text.py  test_symbols.py  test_syntax_check.py
tests/fixtures/ruff_debug/: module_to_organize.py  pyproject.toml
